--- a/NewsApi/Kong.html
+++ b/NewsApi/Kong.html
@@ -8,7 +8,6 @@
 
   <link rel="stylesheet" href="Kong.css">
   <!-- tailwind cdn -->
-  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   <style type="text/tailwindcss"></style>
 </head>
 
@@ -16,11 +15,11 @@
 
   <!-- navbar component -->
   <header class="bg-red-400 w-full h-full flex justify-around sticky">
-    <img src="/Api/kong.png" alt="sk img" class="w-11 h-11 rounded-full bg-white py-1 px-1 flex mt-1 mb-1">
+    <img src="/kong.png" alt="sk img" class="w-11 h-11 rounded-full bg-white py-1 px-1 flex mt-1 mb-1">
     <nav class="flex list-none gap-4 pt-3 font-serif text-2xl font-medium text-blue-500 cursor-pointer">
       <li class="w-3/12 h-8 bg-[bisque] px-3 rounded-md transition-all ease-in-out duration-300">Home</li>
       <li class="w-12/12 h-8 px-3 hover:bg-[bisque] rounded-md transition-all ease-in-out duration-300">Latest News</li>
-      <li class="w-3/12 h-8 px-3 hover:bg-[bisque] rounded-md transition-all ease-in-out duration-300">hyy</li>
+      <li class="w-3/12 h-8 px-3 hover:bg-[bisque] rounded-md transition-all ease-in-out duration-300">Treanding</li>
       <li class="w-3/12 h-8 px-3 hover:bg-[bisque] rounded-md transition-all ease-in-out duration-300">About</li>
     </nav>
   </header>
@@ -47,17 +46,17 @@
           </button>
         </a>
 
-        <h4 class="text-[24px] mx-3 mt-1 cursor-default leading-[22px] truncate-2" id="Heading"></h4>
-        <p class="mx-3 mt-2 cursor-default truncate-3 text-[16px]" id="Paragraph"></p>
+        <h4 class="text-[24px] mx-3 mt-2 cursor-default leading-[22px] truncate-2" id="Heading"></h4>
+        <p class="mx-3 mt-4 cursor-default truncate-3 text-[16px]" id="Paragraph"></p>
       </div>
     </div>
     <!-- end cards component -->
 
     <div class="butt flex absolute bottom-1 justify-between w-full z-10">
-      <button class="px-4 py-2 text-[17px] rounded-md bg-yellow-500 ml-10 cursor-pointer" id="Prev"
-        onclick="Prevpage()">Prev</button>
-      <button class="px-4 py-2 text-[17px] rounded-md bg-yellow-500 mr-10 cursor-pointer" id="Next"
-        onclick="Nextpage()">Next</button>
+      <button class="px-4 py-2 text-[17px] rounded-md text-white ml-50 cursor-pointer" id="Prev"
+        onclick="Prevpage()">&larr; Prev</button>
+      <button class="px-4 py-2 text-[17px] rounded-md text-white mr-80 cursor-pointer" id="Next"
+        onclick="Nextpage()">Next &rarr;</button>
     </div>
 
     <!-- loader -->
@@ -70,7 +69,7 @@
   </div>
 
 
-
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   <script src="Api.js"></script>
 
 </body>
