--- a/NewsApi/Kong.html
+++ b/NewsApi/Kong.html
@@ -14,19 +14,27 @@
 <body>
 
   <!-- navbar component -->
-  <header class="bg-red-400 w-full h-full flex justify-around sticky">
+  <header class="bg-black w-full h-full flex justify-around">
     <img src="/kong.png" alt="sk img" class="w-11 h-11 rounded-full bg-white py-1 px-1 flex mt-1 mb-1">
-    <nav class="flex list-none gap-4 pt-3 font-serif text-2xl font-medium text-blue-500 cursor-pointer">
-      <li class="w-3/12 h-8 bg-[bisque] px-3 rounded-md transition-all ease-in-out duration-300">Home</li>
-      <li class="w-12/12 h-8 px-3 hover:bg-[bisque] rounded-md transition-all ease-in-out duration-300">Latest News</li>
-      <li class="w-3/12 h-8 px-3 hover:bg-[bisque] rounded-md transition-all ease-in-out duration-300">Treanding</li>
-      <li class="w-3/12 h-8 px-3 hover:bg-[bisque] rounded-md transition-all ease-in-out duration-300">About</li>
+    <nav
+      class="flex list-none gap-4 py-2.5 font-serif text-2xl font-medium text-white outline-light-100 cursor-pointer">
+      <ul class="flex gap-1 text-xl font-normal">
+        <li class="hover:bg-gray-700 px-2">General</li>
+        <li class="hover:bg-gray-700 px-2">Entertainment</li>
+        <li class="hover:bg-gray-700 px-2">Health</li>
+        <li class="hover:bg-gray-700 px-2">Business </li>
+        <li class="hover:bg-gray-700 px-2">Science</li>
+        <li class="hover:bg-gray-700 px-2">Sports</li>
+        <li class="hover:bg-gray-700 px-2">Technology</li>
+      </ul>
     </nav>
   </header>
 
   <!-- main card component -->
 
   <div class="card-component">
+
+    <h1 class="text-3xl font-bold text-center mt-2">Kong_News - Latest News</h1>
 
     <div class="inner-card relative" id="inner-card">
 
@@ -52,12 +60,14 @@
     </div>
     <!-- end cards component -->
 
-    <div class="butt flex absolute bottom-1 justify-between w-full z-10">
-      <button class="px-4 py-2 text-[17px] rounded-md text-white ml-50 cursor-pointer" id="Prev"
-        onclick="Prevpage()">&larr; Prev</button>
-      <button class="px-4 py-2 text-[17px] rounded-md text-white mr-80 cursor-pointer" id="Next"
-        onclick="Nextpage()">Next &rarr;</button>
+    <!-- button start -->
+    <div class="butt flex justify-around mb-2 w-full z-10">
+      <button class="px-4 py-2 text-[17px] rounded-md text-white cursor-pointer" id="Prev" onclick="Prevpage()">&larr;
+        Prev</button>
+      <button class="px-4 py-2 text-[17px] rounded-md text-white cursor-pointer" id="Next" onclick="Nextpage()">Next
+        &rarr;</button>
     </div>
+    <!-- button end -->
 
     <!-- loader -->
     <div id="loader" class="fixed inset-0 bg-black/30 flex items-center justify-center hidden z-50">
