update html tags with tailwind

--- a/NewsApi/Kong.html
+++ b/NewsApi/Kong.html
@@ -19,13 +19,13 @@
     <nav
       class="flex list-none gap-4 py-2.5 font-serif text-2xl font-medium text-white outline-light-100 cursor-pointer">
       <ul class="flex gap-1 text-xl font-normal">
-        <li class="hover:bg-gray-700 px-2">General</li>
-        <li class="hover:bg-gray-700 px-2">Entertainment</li>
-        <li class="hover:bg-gray-700 px-2">Health</li>
-        <li class="hover:bg-gray-700 px-2">Business </li>
-        <li class="hover:bg-gray-700 px-2">Science</li>
-        <li class="hover:bg-gray-700 px-2">Sports</li>
-        <li class="hover:bg-gray-700 px-2">Technology</li>
+        <li class="nav-item px-2">general</li>
+        <li class="nav-item px-2">entertainment</li>
+        <li class="nav-item px-2">health</li>
+        <li class="nav-item px-2">business </li>
+        <li class="nav-item px-2">science</li>
+        <li class="nav-item px-2">sports</li>
+        <li class="nav-item px-2">technology</li>
       </ul>
     </nav>
   </header>
