--- a/NewsApi/Kong.html
+++ b/NewsApi/Kong.html
@@ -14,7 +14,7 @@
 <body>
 
   <!-- navbar component -->
-  <header class="bg-black w-full h-full flex justify-around">
+  <header class="bg-black w-full h-full flex justify-around sticky top-0 z-[100]">
     <img src="/kong.png" alt="sk img" class="w-11 h-11 rounded-full bg-white py-1 px-1 flex mt-1 mb-1">
     <nav
       class="flex list-none gap-4 py-2.5 font-serif text-2xl font-medium text-white outline-light-100 cursor-pointer">
